--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # local folder
 data/
+*.ipynb
 
 ### Python ###
 # Byte-compiled / optimized / DLL files
@@ -169,3 +170,41 @@ Icon
 Network Trash Folder
 Temporary Items
 .apdisk
+
+
+### LaTeX ###
+*.acn
+*.acr
+*.alg
+*.aux
+*.bbl
+*.bcf
+*.blg
+*.dvi
+*.fdb_latexmk
+*.fls
+*.glg
+*.glo
+*.gls
+*.idx
+*.ilg
+*.ind
+*.ist
+*.lof
+*.log
+*.lot
+*.maf
+*.mtc
+*.mtc0
+*.nav
+*.nlo
+*.out
+*.pdfsync
+*.ps
+*.run.xml
+*.snm
+*.synctex.gz
+*.toc
+*.vrb
+*.xdy
+*.tdo
